k8s/apps/grafana/alertmanager-discord.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: alertmanager-discord
  name: alertmanager-discord
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alertmanager-discord
  strategy: {}
  template:
    metadata:
      labels:
        app: alertmanager-discord
    spec:
      containers:
        - name: alertmanager-discord
          image: alertmanager-discord
          ports:
            - name: http
              containerPort: 9094
          resources: 
            requests:
              cpu: 20m
              memory: 40Mi
            limits:
              cpu: 20m
              memory: 40Mi

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: alertmanager-discord
  name: alertmanager-discord
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9094
    protocol: TCP
    targetPort: 9094
  selector:
    app: alertmanager-discord
