k8s/apps/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
  - name: shared
    namespace: default
  hostnames:
  - grafana.prod.juliamertz.dev
  rules:
  - backendRefs:
    - name: grafana
      port: 80
